# flycastsim

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_DOCS.md  flycast_dev_explore.ipynb  flysim_examples.ipynb  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
assets/cast1/: captions.json
doc/: dev.rst  index.rst
docs/: brick_spring.rst  conf.py  dev.rst  fem.rst  index.rst  planned.rst  rod.rst
flycast/: brick_spring.py
src/flycast/: __init__.py  brick_spring.py  brick_spring_helpers.py
src/flycastsim/: __init__.py  brick_spring.py  brick_spring_helpers.py  brick_spring_test.m  fem_helpers.py
src/flycastsim/data/components/cast1/: leader.csv  leader.json  line.csv  line.json  rig.json  rod.csv  rod.json
src/flycastsim/data/rods/: example_rods.json
src/flycastsim/fem/: __init__.py  _cast1_data.py  analytic.py  cast.py  components.py  coords.py  domain.py  drag.py  genalpha.py  multidomain.py  operators.py  solver.py  state.py
src/flycastsim/rod/: __init__.py  data.py  helpers.py  swingweight.py
src/flycastsim/sho/: __init__.py  helpers.py
src/flycastsim/sho/matlab/: brick_spring.m
tests/: conftest.py
tests/unit/: test_coords.py  test_fem_cast.py  test_fem_drag.py  test_fem_multidomain.py  test_fem_verification.py  test_rod_swingweight.py  test_simple_brick_spring.py
