[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flycastsim"
version = "0.0.2"
description = "Python package with functions for simulations of fly-casting"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-2-Clause" }
authors = [
    { name = "Grunde Løvoll", email = "grunde@fiskekroken.org" },
]
keywords = ["simulations", "physics", "fly casting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "plotly",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/grunde73/flycastsim"
Documentation = "https://grunde73.github.io/flycastsim"
Repository = "https://github.com/grunde73/flycastsim"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autoapi",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
app = [
    "streamlit>=0.80",
]

[tool.uv]
default-groups = ["dev", "app"]

[tool.hatch.build.targets.wheel]
packages = ["src/flycastsim"]

[tool.hatch.build.targets.sdist]
include = [
    "src/flycastsim",
    "tests",
    "LICENSE",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
# Sphinx conf.py manipulates sys.path before imports; notebooks are dev scratch.
extend-exclude = ["docs", "*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files deliberately re-export the public API.
"__init__.py" = ["F401"]
# Tests use section-local imports and short physics symbols (e.g. `l` = length).
"tests/**" = ["E402", "E741"]
